--- a/test/fixtures/books.yml
+++ b/test/fixtures/books.yml
@@ -1,14 +1,14 @@
 alice_book:
-  title: Alice's Book
+  title: I am Alice
   author_name: Alice
   author_email: foo@example.com
 
 allen_book:
-  title: Allen's Book
-  author_name: ALLEN
+  title: I AM ALLEN
+  author_name: Allen
   author_email: bar@example.com
 
 bob_book:
-  title: Bob's book
+  title: I am bob
   author_name: Bob
   author_email: xyz@example.com
